--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -45,8 +45,8 @@
       </div>
       <nav class="main-nav">
         <ul>
-          <li><a href="/greetings.html">교회소개</a></li>
-          <li><a href="/notice.html">교회소식</a></li>
+          <li><a href="#">교회소개</a></li>
+          <li><a href="#">교회소식</a></li>
           <li><a href="#">부서별</a></li>
           <li><a href="#">예배</a></li>
         </ul>
