햄버거 메뉴 만들기1

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -48,12 +48,11 @@
         </div>
 
         <ul class="main-nav">
-          <li><a href="#">HOME</a></li>
           <li><a href="#">교회소개</a></li>
           <li><a href="#">교회소식</a></li>
-          <li><a href="#">갤러리</a></li>
-          <li><a href="#">게시판</a></li>
-          <li><a href="#">오시는길</a></li>
+          <li><a href="#">부서별</a></li>
+          <li><a href="#">예배</a></li>
+          <li><a href="#">자료실</a></li>
       </nav>
     </header>
 
@@ -73,15 +72,5 @@
         COPYRIGHT©2025 한사랑교회 All Rights Reserved. Designed by 손지성 청년
       </p>
     </footer>
-
-    <script>
-      const menuToggle = document.querySelector(".main-toggle");
-      const mainNav = document.querySelector(".main-nav");
-
-      // 메뉴 토글 가능
-      menuToggle.addEventListener("click", () => {
-        mainNav.classList.toggle("active");
-      });
-    </script>
   </body>
 </html>
