햄버거 메뉴 만들기3

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -2,13 +2,16 @@
 
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- 스타일 연결-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <!-- 아이콘 사용 가능 라이브러리-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <!-- 파비콘 설정 -->
     <link
       rel="apple-touch-icon"
@@ -30,7 +33,7 @@
     />
     <link rel="shortcut icon" href="/images/favicon.ico" />
     <title>한사랑교회 홈페이지</title>
-</head>
+  </head>
   <body>
     <!--상단바-->
     <header class="navbar">
@@ -46,33 +49,14 @@
           <li><a href="#">자료실</a></li>
         </ul>
       </nav>
-        <button class="hamburger-button" aria-expanded="false" aria-controls="main-navigation">
-            <span class="sr-only">메뉴 열기/닫기</span>
-            <i class="fa-solid fa-bars"></i>
-        </button>
-    </header>
-
-    
-  </head>
-  <body>
-    <header class="main-header">
-      <nav class="navbar">
-        <a href="/">
-          <img src="/images/main.jpg" alt="로고" />
-        </a>
-        <div class="hambuger-menu">
-          <div class = "bar"></div>
-          <div class = "bar"></div>
-          <div class = "bar"></div>
-        </div>
-
-        <ul class="main-nav">
-          <li><a href="#">교회소개</a></li>
-          <li><a href="#">교회소식</a></li>
-          <li><a href="#">부서별</a></li>
-          <li><a href="#">예배</a></li>
-          <li><a href="#">자료실</a></li>
-      </nav>
+      <button
+        class="hamburger-button"
+        aria-expanded="false"
+        aria-controls="main-navigation"
+      >
+        <span class="sr-only">메뉴 열기/닫기</span>
+        <i class="fa-solid fa-bars"></i>
+      </button>
     </header>
 
     <section class="main-slider">
