햄버거 메뉴 만들기6

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -46,7 +46,7 @@
         <i class="fa-solid fa-bars"></i>
       </button>
 
-      <a href="/">
+      <a href="/" class="navbar-logo-link">
         <img src="/images/main.jpg" alt="로고" />
       </a>
 
