햄버거 메뉴 만들기7

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -47,7 +47,7 @@
       </button>
 
       <a href="/" class="navbar-logo-link">
-        <img src="/images/main.jpg" alt="로고" />
+        <img src="/images/main.jpg" alt="로고" class="navbar-logo" />
       </a>
 
       <nav class="nav-links-container">
