로그인 화면

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -59,6 +59,10 @@
           <li><a href="#">자료실</a></li>
         </ul>
       </nav>
+
+      <a href="/login.html" class="login-icon">
+        <i class="fa-solid fa-user"></i>
+      </a>
     </header>
 
     <section class="main-slider">
