--- a/main/templates/main/register.html
+++ b/main/templates/main/register.html
@@ -38,9 +38,7 @@
         </ul>
       </nav>
 
-      <a href="login.html" class="login-icon">
-        <i class="fa-solid fa-user"></i>
-      </a>
+      <div class="user-status-container"></div>
     </header>
 
     <main class="form-container">
@@ -90,5 +88,6 @@
 
     <script src="/js/home.js"></script>
     <script src="/js/register.js"></script>
+    <script src="/js/mypage.js"></script>
   </body>
 </html>
