--- a/main/templates/main/find_password.html
+++ b/main/templates/main/find_password.html
@@ -36,9 +36,7 @@
         </ul>
       </nav>
 
-      <a href="login.html" class="login-icon">
-        <i class="fa-solid fa-user"></i>
-      </a>
+      <div class="user-status-container"></div>
     </header>
 
     <main class="form-container">
@@ -77,5 +75,6 @@
 
     <script src="/js/home.js"></script>
     <script src="/js/find_password.js"></script>
+    <script src="/js/mypage.js"></script>
   </body>
 </html>
