--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -60,9 +60,7 @@
         </ul>
       </nav>
 
-      <a href="/login.html" class="login-icon">
-        <i class="fa-solid fa-user"></i>
-      </a>
+      <div class="user-status-container"></div>
     </header>
 
     <section class="main-slider">
@@ -82,5 +80,6 @@
       </p>
     </footer>
     <script src="/js/home.js"></script>
+    <script src="/js/mypage.js"></script>
   </body>
 </html>
