로그인 상태2

--- a/main/templates/main/find_password.html
+++ b/main/templates/main/find_password.html
@@ -73,8 +73,7 @@
       </p>
     </footer>
 
-    <script src="/js/home.js"></script>
     <script src="/js/find_password.js"></script>
-    <script src="/js/mypage.js"></script>
+    <script src="/js/header.js"></script>
   </body>
 </html>
