--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -79,7 +79,6 @@
         COPYRIGHT©2025 한사랑교회 All Rights Reserved. Designed by 손지성 청년
       </p>
     </footer>
-    <script src="/js/home.js"></script>
-    <script src="/js/mypage.js"></script>
+    <script src="/js/header.js"></script>
   </body>
 </html>
