--- a/main/templates/main/register.html
+++ b/main/templates/main/register.html
@@ -86,8 +86,7 @@
       </p>
     </footer>
 
-    <script src="/js/home.js"></script>
     <script src="/js/register.js"></script>
-    <script src="/js/mypage.js"></script>
+    <script src="/js/header.js"></script>
   </body>
 </html>
