--- a/main/templates/main/mypage.html
+++ b/main/templates/main/mypage.html
@@ -121,7 +121,7 @@
       </p>
     </footer>
 
-    <script src="/js/home.js"></script>
     <script src="/js/mypage.js"></script>
+    <script src="/js/header.js"></script>
   </body>
 </html>
