로그인 상태3

--- a/main/templates/main/findpassword.html
+++ b/main/templates/main/findpassword.html
@@ -73,7 +73,7 @@
       </p>
     </footer>
 
-    <script src="/js/find_password.js"></script>
+    <script src="/js/findpassword.js"></script>
     <script src="/js/header.js"></script>
   </body>
 </html>
