--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -54,7 +54,7 @@
         </div>
         <button type="submit" class="btn-submit">로그인</button>
         <div class="form-links">
-          <a href="find_password.html">비밀번호 찾기</a>
+          <a href="findpassword.html">비밀번호 찾기</a>
           <a href="register.html">회원가입</a>
         </div>
       </form>
