비밀번호 찾기 고치기

--- a/main/templates/main/mypage.html
+++ b/main/templates/main/mypage.html
@@ -46,11 +46,11 @@
 
       <div class="mypage-section user-info">
         <h2>사용자 정보</h2>
-        <p><strong>이름:</strong> <span id="userName"></span></p>
-        <p><strong>아이디:</strong> <span id="userId"></span></p>
-        <p><strong>이메일:</strong> <span id="userEmail"></span></p>
-        <p><strong>칭호:</strong> <span id="userTitle"></span></p>
-        <p><strong>역할:</strong> <span id="userRole"></span></p>
+        <p><strong>이름:</strong> <span id="user-name"></span></p>
+        <p><strong>아이디:</strong> <span id="user-username"></span></p>
+        <p><strong>이메일:</strong> <span id="user-email"></span></p>
+        <p><strong>칭호:</strong> <span id="user-title"></span></p>
+        <p><strong>역할:</strong> <span id="user-role"></span></p>
       </div>
 
       <div class="mypage-section">
